<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vrobot_command</name>
  <version>0.1.0</version>
  <description>Command validation layer for the vrobot VR control pipeline.</description>
  <maintainer email="pyw@todo.todo">pyw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_tcp_endpoint</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
